# fabric-supernet

./: .dockerignore  .env  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.build  Production Build.txt  README.md  README_PROD_V7.md  SHA256SUMS.txt  SuperNet.Scan.v2.ps1  build_all.bat  compile.bat  compile.sh  docker-compose.yml  ecosystem.config.js  electron-builder.yml  electron.tsconfig.json  fab-run.ps1  fabricsec_missing.txt  fabricsec_present.txt  make-weights.bat  make-weights.sh  next_steps.md  package-lock.json  package.json  registry.pub  result.txt  run-pipeline.ps1  supernet_audit.json
.github/workflows/: build.yml  ci.yml  design-conformance.yml  nightly-verify.yml  release.yml  smoke.yml  validate-and-publish.yml
agents/: ecosystem.config.js
agents/AtomicMemoryDBAgent/: CMakeLists.txt  model.yaml
agents/AtomicMemoryDBAgent/weights/: atomicmemorydbagent.bin.json
agents/DroneAgent/: model.yaml
agents/FabricGovernor/: main.cpp  model.yaml
agents/NetworkAgent/: model.yaml
agents/SI.Builder/: Builder.fab  builder.mjs  manifest.yaml  package.json
agents/SI.Deployer/: Deployer.fab  deployer.mjs  manifest.yaml  package.json
app-store/: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  KEYLESS_SIGNING.md  PUBLISHER_GUIDE.md  Publish Commands.txt  README.md  SECURITY.md  cosign.key  cosign.pub  package-lock.json  package.json
artifacts/staging/pkg-20250814174106/agents/LaptopAgent/: CMakeLists.txt  README.md  main.cpp
artifacts/staging/pkg-20250814174106/agents/LaptopAgent/src/: _log_tokens_marker.cpp  browser_watch.cpp
artifacts/staging/pkg-20250814174106/agents/LaptopAgent/weights/: laptopagent.bin.json
artifacts/staging/pkg-20250814174106/agents/SmartphoneAgent/: CMakeLists.txt
artifacts/staging/pkg-20250814174106/agents/SmartphoneAgent/src/: _log_tokens_marker.cpp
artifacts/staging/pkg-20250814174106/agents/SmartphoneAgent/weights/: smartphoneagent.bin.json
artifacts/staging/pkg-20250814174558/agents/DroneAgent/: CMakeLists.txt  main.cpp
artifacts/staging/pkg-20250814174558/agents/DroneAgent/src/: audit_delta.cpp  drone_id_beacon.cpp  signal_extender.cpp  treasury.cpp  weight_loader.hpp
artifacts/staging/pkg-20250814174647/agents/FabricGovernor/: CMakeLists.txt
artifacts/staging/pkg-20250814174647/agents/FabricGovernor/src/: audit_trail.cpp  consensus_router.cpp
artifacts/staging/pkg-20250814174647/agents/FabricGovernor/weights/: fabricgovernor.bin.json
build-mint-runtime/: CMakeCache.txt
config/: fabricsec.policy.json  supernet.client.json
dist-electron/: bootstrap.js  main.cjs  main.js  main_ipc_registry.js  preload.cjs  preload.js
electron-src/: device.enroll.ts  exporter.ts  fabricsec.ts  git.admin.ts  licenses.ts  main.ts  main.ts.bak  main_ipc_registry.ts  network.wifi.ts  plugin.catalog.ts  preload.ts  sec.dpapi.ts  secrets.ts  supernet.client.ts  updates.ts
examples/: hello.fab
fabric-main/: .gitignore  Core runtime & host bridges.txt  Dockerfile  INTEGRATION.md  README.md  app.js  electron-builder.yml  electron.tsconfig.json  electron.tsconfig.json.bak.20250816-104956  electron.tsconfig.json.bak.20250816-105122  index.html  index.html.bak.20250816-111554  package-lock.json  package.json  package.json.bak  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
fabric-supernet-e2e-harness/: .env.example  README.md  docker-compose.alias.yml  docker-compose.mock.yml  docker-compose.mock.yml;docker-compose.alias.yml  docker-compose.real.yml  docker-compose.yml  mock-api.js  package-lock.json  package.json  playwright.config.ts
fabric-weave/: INSTALL.md  README.md  README_WIRING.md  index.html  package-lock.json  package.json  plugin.config.ts  plugin.config.ts.backup.bak  plugin.config.ts.bad.bak  plugin.config.ts.pre-named-export.bak  plugin.config.ts.safeback.bak  plugin.config.ts.supernet.bak  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.config.ts.bak_20250819_124726  vite.config.ts.bak_20250819_133420  vite.config.ts.bak_20250819_143903  vite.config.ts.bak_20250819_144307  vite.config.ts.bak_20250819_150313  vite.config.ts.bak_20250819_151130  vite.config.ts.bak_20250819_151711
hardhat/: README.md  hardhat.config.js  package.json
policies/: drone.field.json  governor.global.json  laptop.default.json  laptop.restricted.json  memorydb.default.json  network.default.json  smartphone.default.json  wifi.default.json  wifi.gateway.json
runtime/: CMakeLists.txt  json.hpp  mint-runtime.cmd  mint-runtime.js  mint-runtime.ps1  policy.cpp  policy.h  policy_stub.cpp  treasury.cpp  treasury.h  treasury_stub.cpp
scripts/: build_test.bat  build_test.sh  ci_build.sh  dpapi-bridge.ps1  e2e.bat  e2e.sh  fabricsec-scan.ps1  precompile.bat  precompile.sh  remote-compile.js  smoke-ok.cjs  smoke.bat  smoke.sh
src/: server.js
tests/: test_epoch_scheduler.cpp  test_minting_kernel.cpp  wiring.requirements.json  wiring.spec.cjs
tools/: Add-MintKernel.ps1  Complete-ReleaseAndWeights.ps1  Forensic-Scan.ps1  Pack-Production.ps1  Require-AgentScripts.ps1  Scan-SuperNet.ps1  Test-DesignConformance-Auto.ps1  Test-DesignConformance.ps1  fabpkg.ps1  fabverify.ps1  model_manifest.schema.json  static_verify.py
training/: README.md  config.yaml
types/: shims-electron.d.ts
(+729 files in other folders)
